# kara

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  BRANCH_PROTECTION_QUICK_REF.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: BRANCH_PROTECTION.md  BRANCH_RULESET_SUMMARY.md  CODEOWNERS
.github/scripts/: README.md  test-validation.py  validate-branch.py
.github/workflows/: branch-validation.yml  ci.yml  publish.yml  test-publish.yml
benchmarks/: plot_benchmark.py  wiki_benchmark.csv  wiki_benchmark.py
docs/: conf.py  index.rst  kara.integrations.rst  kara.rst  modules.rst
examples/: README.md  basic_usage.ipynb  basic_usage.py  langchain_example.ipynb  langchain_example.py  langchain_integration.ipynb
src/kara/: __init__.py  _version.py  chunkers.py  core.py  splitters.py
src/kara/integrations/: __init__.py  langchain.py
tests/: conftest.py  test_core.py  test_data_driven.py  test_data_loader.py  test_integration.py  test_langchain.py  test_multi_document.py  test_splitters.py  test_units.py
tests/test_data/scenarios/: complete_replacement.json  empty_content.json  empty_document.json  high_epsilon_small_change.json  high_imperfect_chunk_tolerance_small_change.json  invalid_parameters.json  low_epsilon_small_change.json  low_imperfect_chunk_tolerance_small_change.json  middle_insertion.json  multi_doc_all_changed.json  multi_doc_one_changed.json  multi_doc_removal.json  overlap_exceeds_chunk.json  overlap_two_units.json  paragraph_separators.json  repetitive_chunks.json  sentence_separators.json  simple_addition.json  very_large_chunks.json  very_small_chunks.json  wikipedia_style.json
vscode/: settings.json
