[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "kara-python"
version = "0.1.0"
description = "Knowledge-Aware Re-embedding Algorithm - Efficient RAG knowledge base updates"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Mahdi Zakizadeh", email = "mzakizadeh.me@gmail.com" }]
keywords = [
    "rag",
    "embeddings",
    "knowledge-base",
    "nlp",
    "langchain",
    "llamaindex",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy>=1.21.0", "typing-extensions>=4.0.0"]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "langchain-core>=0.0.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = ["kara-python[langchain,dev]"]

[project.urls]
Homepage = "https://github.com/yourusername/kara-python"
Repository = "https://github.com/yourusername/kara-python"
Documentation = "https://kara-python.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/kara-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["pykara"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pykara --cov-report=html --cov-report=term-missing"
